k8/sonarqube.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"postgresql"}]'
  labels:
    app.kubernetes.io/part-of: "Static-Application-Security-Testing"
spec:
  serviceName: sonarqube
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        supplementalGroups: [1000]
      containers:
        - name: sonarqube
          image: sonarqube:lts-community
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: sonarqube-data
              mountPath: /opt/sonarqube/data
  volumeClaimTemplates:
    - metadata:
        name: sonarqube-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
