k8/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  ports:
    - port: 5432
      name: postgresql
  selector:
    app: postgresql
